<resources>
    <string name="app_name">Lab 02</string>
    <string name="hello">Hello!</string>
    <string name="type_here">What Is Your Name?</string>
    <string name="change">change!</string>
    <string name="click">Click!</string>
    <string name="mee">mee</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>